Export Anki cards with ids, add Dialog about the state of exports