@@ -48,6 +48,10 @@ tasks.withType<JavaCompile> {
     options.compilerArgs.add("--enable-preview")
 }
 
+tasks.withType<Test> {
+    jvmArgs = listOf("--enable-preview")
+}
+
 tasks.test {
     useJUnitPlatform()
 }
